<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start|center_vertical"
            >
            <TextView
                android:id="@+id/project_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_label"
                android:layout_gravity="start|center_vertical"
                android:textSize="18sp"
                />
            <ImageButton
                android:id="@+id/project_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_information"
                android:contentDescription="@string/project_info"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="center_vertical"
                android:padding="4dp"
                android:layout_marginStart="10dp"
                app:tint="?attr/colorSecondary"/>
        </LinearLayout>
        <EditText
            android:id="@+id/project_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/project_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/colorSurface"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/add_project_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_plus"
        android:background="@drawable/ripple_background_tertiary"
        android:contentDescription="@string/add_project"
        android:layout_gravity="end|bottom"
        android:padding="4dp"
        android:layout_margin="16dp"
        app:tint="?attr/colorOnTertiary"
        />
</FrameLayout>